[gd_scene load_steps=2 format=3 uid="uid://dvwjjv8ta2lgk"]

[ext_resource type="Script" path="res://saveDemo/main.gd" id="1_tomb7"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tomb7")

[node name="save_Button" type="Button" parent="."]
offset_left = 225.0
offset_top = 101.0
offset_right = 265.0
offset_bottom = 132.0
text = "保存"

[node name="load_Button" type="Button" parent="."]
offset_left = 340.0
offset_top = 86.0
offset_right = 380.0
offset_bottom = 117.0
text = "加载"

[node name="new_game_Button" type="Button" parent="."]
offset_left = 160.0
offset_top = 55.0
offset_right = 216.0
offset_bottom = 86.0
text = "新游戏"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control/GridContainer"]
layout_mode = 2
text = "123"

[connection signal="pressed" from="save_Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="load_Button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="new_game_Button" to="." method="_on_new_game_button_pressed"]
